apps/ingress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: NodePort  # Changed to NodePort since we're using ALB
  ports:
    - name: http
      port: 80           # Service port
      targetPort: 80     # Container port
      nodePort: 30080     # This matches our security group rule
      protocol: TCP
    - name: https
      port: 443          # Service port
      targetPort: 443    # Container port
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
